# cokit-messenger

./: .env.mock  .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/: environment.json  install-co-cli.sh
.cursor/rules/: macos-app-icon.mdc
.cursor/skills/co-cli/: SKILL.md
.github/workflows/: ci.yml  release.yml
scripts/: dev-instances.mjs  generate-macos-icons.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.dev-instance-b.conf.json  tauri.dev-instance-c.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/_base/macOS/Icon.icon/: icon.json
src-tauri/src/: lib.rs  macos_display_name.rs  main.rs
src/components/: AppShell.tsx  ChatListItem.tsx  ChatPane.tsx  ChatSidebar.tsx  Composer.tsx  EmptyState.tsx  GroupDetails.tsx  Icon.tsx  JoinGroupModal.tsx  MessageBubble.tsx  NewGroupPanel.tsx  pane.ts
src/components/chat/: ChatPane.tsx  Composer.tsx  InviteAcceptPane.tsx  MessageBubble.tsx  SystemEventBubble.tsx
src/components/chat-details/: GroupDetails.tsx  InviteCoMemberDialog.tsx  InviteParticipantDialog.tsx  NewGroupPanel.tsx
src/components/global/: ActionMenu.tsx  AppDialog.tsx  Button.tsx  CoMemberLabel.tsx  CoMemberRow.tsx  ConfirmDialog.tsx  ContentPaneHeader.tsx  ErrorCard.tsx  GroupAvatar.tsx  IdentityLoadingScreen.tsx  ParticipantLabel.tsx  ParticipantRow.tsx  ProfilePanel.tsx
src/components/hooks/: useChatMutations.ts  useChatPipeline.ts  useCoMembers.ts  useGroupRoster.ts  useMemberships.ts
src/components/sidebar/: ChatListItem.tsx  ChatSidebar.tsx  EmptyState.tsx  (+1 more)
src/lib/: messenger.ts  theme.ts  useOverflowHeaderBorder.ts
src/styles/: app.css
(+60 files in other folders)
